--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,6 @@
-<input type="button" value="Login" onclick="j.Login(fbAsyncInit);">
-<input type="button" value="Logout" onclick="FB.logout();">
+<div id="login">
+    <button type="button" onclick="j.Login(fbAsyncInit);" id="fblogin">Login with Facebook</button>
+</div>
 
 
 
@@ -9,8 +10,24 @@
 </div>
 
 
+<div id="loading">
+    <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+    </div>
+</div>
 
 
+<div id="allread">
+    All read!<br />
+    Good job!
+    <button type="button" onclick="j.SwipeBook.fetch()">Refresh &#8635;</button>
+</div>
+
+<!-- <input type="button" value="Logout" onclick="j.Logout()"> -->
 
 
 
